# cpp_pipelines

./: .clang-format  CMakeLists.txt  README.md
docs/: functions.md  log.md  map.md  opt.md  predicates.md  res.md  scope_functions.md  seq.md  set.md  sub.md  tpl.md  var.md
include/cpp_pipelines/: algorithm.hpp  arrays.hpp  container_utils.hpp  debug.hpp  format.hpp  functions.hpp  index_sequence.hpp  integer_types.hpp  invoke.hpp  iter_utils.hpp  iterable.hpp  iterator_interface.hpp  log.hpp  macros.hpp  map.hpp  operators.hpp  opt.hpp  out_argument.hpp  output.hpp  pattern_matching.hpp  pipeline.hpp  predicates.hpp  reference_wrapper_operators.hpp  res.hpp  scope_functions.hpp  semiregular.hpp  seq.hpp  set.hpp  slice.hpp  source_location.hpp  sub.hpp  subrange.hpp  tap.hpp  tpl.hpp  type_traits.hpp  types.hpp  var.hpp  view_interface.hpp
include/cpp_pipelines/opt/: opt.hpp  optional_ref.hpp
include/cpp_pipelines/res/: res.hpp
include/cpp_pipelines/seq/: access.hpp  accumulate.hpp  adjacent.hpp  adjacent_transform.hpp  cache_latest.hpp  checks.hpp  chunk.hpp  chunk_base.hpp  chunk_by.hpp  chunk_by_key.hpp  concat.hpp  copy.hpp  distance.hpp  drop.hpp  drop_last.hpp  drop_while.hpp  empty.hpp  enumerate.hpp  filter.hpp  for_each.hpp  generate.hpp  getlines.hpp  group_by.hpp  group_by_key.hpp  inspect.hpp  intersperse.hpp  iota.hpp  istream.hpp  iterate.hpp  join.hpp  join_with.hpp  map_at.hpp  numeric.hpp  order_by.hpp  predicates.hpp  repeat.hpp  reverse.hpp  slice.hpp  split.hpp  (+17 more)
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  format.test.cpp  functions.test.cpp  log.test.cpp  map.test.cpp  opt.test.cpp  opt_transform.test.cpp  res.test.cpp  scope_functions.test.cpp  seq.test.cpp  set.test.cpp  sub.test.cpp  test_utils.hpp  var.test.cpp
(+12 files in other folders)
